2022-03-22: fix OpenAPI spec
